# calver

./: .fnox.toml  .mise.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  action.yml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
src/: config.rs  git.rs  github.rs  gitops.rs  lib.rs  main.rs  version.rs
src/project/: cargo.rs  go.rs  helm.rs  kustomization.rs  mod.rs  npm.rs  plain.rs  python.rs
