[package]
name = "calver"
version = "2026.5.0"
edition = "2021"
description = "Convention-based CalVer versioning CLI for code projects"
license = "MIT"
keywords = ["versioning", "calver", "semver", "release", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "calver"
path = "src/lib.rs"

[[bin]]
name = "calver"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = { version = "0.22", features = ["serde"] }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
