[package]
name = "annover"
version = "2026.13.0"
edition = "2021"
description = "Convention-based AnnoVer versioning CLI for code projects"
license = "MIT"
keywords = ["versioning", "annover", "semver", "release", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "annover"
path = "src/lib.rs"

[[bin]]
name = "annover"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
ignore = "0.4"
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = { version = "0.22", features = ["serde"] }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
